--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         7. cat id_test.pub // For viewing the key in terminal
         8. pbcopy < ~/.ssh/id_test.pub
         9. public key will go to the github accoiunt
-        10. git config core.sshCommand "ssh -i ~/.ssh/id_test -o IdentitiesOnly=yes"
+        10. git config core.sshCommand "ssh -i ~/.ssh/id_test -o IdentitiesOnly=yes" 
+        11. git push -u origin master
     </p>
 </body>
 </html>
