--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <p>
+        ID_RSA KEY
         1. cd ~/.ssh
         2. ls -a
         3. ssh-keygen -t rsa -b 2048 -C "your_email@example.com"
